<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signin.SigninFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/ydFmColorSurface"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="26dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_phone" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/text_hint_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_address" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/text_hint_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_house_no" />

        <EditText
            android:id="@+id/etHouseNumber"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/text_hint_house_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_city" />

        <EditText
            android:id="@+id/etCity"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/text_hint_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSignUpNow"
            android:text="@string/text_sign_up_now"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>