<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ydFmColorSurfaceLow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.detail.PaymentSuccessFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="201dp"
        android:src="@drawable/ic_success_order" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextView.PoppinsNormal20sp020202"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_you_ve_made_order" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/TextView.PoppinsNormal14sp8D92A3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/text_just_stay_at_home_while_we_are_npreparing_your_best_foods"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnOtherFood"
        style="@style/Button.Primary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_order_other_food"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnMyOrder"
        style="@style/Button.Secondary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/text_view_my_order"
        android:textAllCaps="false" />

</LinearLayout>