<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yogadimas.yogadimas_foodmarketbwa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.yogadimas.yogadimas_foodmarketbwa.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.yogadimas.yogadimas_foodmarketbwa.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/homePopularFragment"
        android:name="com.yogadimas.yogadimas_foodmarketbwa.ui.home.popular.HomePopularFragment"
        android:label="fragment_home_popular"
        tools:layout="@layout/fragment_home_popular" >
        <action
            android:id="@+id/action_homePopularFragment_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
    <fragment
        android:id="@+id/homeRecommendedFragment"
        android:name="com.yogadimas.yogadimas_foodmarketbwa.ui.home.recommended.HomeRecommendedFragment"
        android:label="fragment_home_recommended"
        tools:layout="@layout/fragment_home_recommended" >
        <action
            android:id="@+id/action_homeRecommendedFragment_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
    <activity
        android:id="@+id/detailActivity"
        android:name="com.yogadimas.yogadimas_foodmarketbwa.ui.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" />


</navigation>