<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/ydFmColorSurfaceLow"
    android:layout_height="match_parent"
    tools:context=".ui.order.OrderFragment">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--        android:id="@+id/ll_tab"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/include_toolbar">-->

<!--        <com.google.android.material.appbar.AppBarLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="?attr/ydFmColorSurface">-->

<!--            <com.google.android.material.tabs.TabLayout-->
<!--                android:id="@+id/tab_layout"-->
<!--                style="@style/Widget.App.TabLayout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->

<!--        </com.google.android.material.appbar.AppBarLayout>-->

<!--        <androidx.viewpager.widget.ViewPager-->
<!--            android:id="@+id/viewPager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />-->

<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="?attr/ydFmColorSurfaceLow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="200dp"
            android:layout_height="201dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_empty_order" />

        <TextView
            style="@style/TextView.PoppinsNormal20sp020202"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_ouch_hungry" />

        <TextView
            style="@style/TextView.PoppinsNormal14sp8D92A3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_seem_like_you_have_not_nordered_any_food_yet"
            android:textAlignment="center" />

        <Button
            style="@style/Button.Primary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_find_foods"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>